app/assets/stylesheets/components/_navbar.scss
.navbar-lewagon {
  justify-content: space-between;
  background: $black;
  display: flex;
  height: 8vh;
  position: fixed;
  bottom: 0;
  z-index: 10;
  width: 100%;
}

.navbar-lewagon .navbar-collapse {
  flex-grow: 0;
}

.navbar-lewagon .navbar-brand img {
  width: 40px;
}

.navbar-logo {
  margin: 0px -8px 0px 8px;
}

.navbar-icon {
  color: #EEF0F2;
  transition: 0.2s;
  &:hover {
    color: grey;
  }
}

.navbar-active {
  color: $yellow;
  &:hover {
  color: $yellow;
  }
}

.nav-link {
  color: white;
}

// STICKY FOOTER BELOW

html, body {
  height: 100%;
}
body {
  display: flex;
  flex-direction: column;
}
.content {
  flex: 1 0 auto;
  background-color: white;
}
.footer {
  flex-shrink: 0;
}

// STICKY FOOTER ABOVE

